discussion/kv_engine/127320/127320_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-37319: Add support for opening historical snapshot - WIP

Try to detect the oldest file header containing the change and
stream that one

@todo add unit tests!!!

Change-Id: I727e8fc09c0a62a02e38a659855771f6d35133e2

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2020-05-11 05:16:37.000000000
Message: 
Uploaded patch set 6: Patch Set 5 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-05-11 05:50:18.000000000
Message: 
Patch Set 6: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28026/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\couch-kvstore\couch-kvstore.cc(1404): error C2039: "seekFirstHeaderContaining": is not a member of "cb::couchstore" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28026/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2149/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1404:39: error: no member named "seekFirstHeaderContaining" in namespace "cb::couchstore" [clang-diagnostic-error]
        auto status = cb::couchstore::seekFirstHeaderContaining(
                                      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2149/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1404:39:
error: no member named "seekFirstHeaderContaining" in namespace "cb::couchstore" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2149/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23989/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1404:39:
error: no member named "seekFirstHeaderContaining" in namespace "cb::couchstore"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23989/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2665/ : FAILURE

Compile error at [2020-05-11T05:17:32.490Z] /Library/Developer/CommandLineTools_11.3.1/usr/bin/../include/c++/v1/string.h:61:15:
fatal error: "string.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2665/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3608/ : FAILURE

Compile error at [2020-05-11T05:33:29.111Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1404:39:
error: ?seekFirstHeaderContaining? is not a member of ?cb::couchstore?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3608/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3581/ : FAILURE

Compile error at [2020-05-11T05:33:56.929Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1404:39:
error: ?seekFirstHeaderContaining? is not a member of ?cb::couchstore?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3581/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11453/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3668/ : FAILURE

Compile error at [2020-05-11T05:35:17.830Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1404:39:
error: ?seekFirstHeaderContaining? is not a member of ?cb::couchstore?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3668/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/670/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-05-11 07:17:18.000000000
Message: 
Patch Set 6:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28026/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\couch-kvstore\couch-kvstore.cc(1404): error C2039: "seekFirstHeaderContaining": is not a member of "cb::couchstore" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28026/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2149/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1404:39: error: no member named "seekFirstHeaderContaining" in namespace "cb::couchstore" [clang-diagnostic-error]
        auto status = cb::couchstore::seekFirstHeaderContaining(
                                      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2149/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1404:39:
error: no member named "seekFirstHeaderContaining" in namespace "cb::couchstore" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2149/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23989/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1404:39:
error: no member named "seekFirstHeaderContaining" in namespace "cb::couchstore"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23989/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3608/ : FAILURE

Compile error at [2020-05-11T05:33:29.111Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1404:39:
error: ?seekFirstHeaderContaining? is not a member of ?cb::couchstore?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3608/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3581/ : FAILURE

Compile error at [2020-05-11T05:33:56.929Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1404:39:
error: ?seekFirstHeaderContaining? is not a member of ?cb::couchstore?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3581/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11453/ : FAILURE

Compile error at [2020-05-11T05:49:29.947Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1404:39:
error: ?seekFirstHeaderContaining? is not a member of ?cb::couchstore?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11453/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3668/ : FAILURE

Compile error at [2020-05-11T05:35:17.830Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1404:39:
error: ?seekFirstHeaderContaining? is not a member of ?cb::couchstore?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3668/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2672/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/670/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
